Convert @compile/@run to use --add-modules=<name> until jtreg accepts new white-space options