@@ -27,7 +27,7 @@
  * @summary test that stackoverflow is not observable when element
  *          references containing class
  * @modules java.xml.bind
- * @compile -addmods java.xml.bind SchemagenStackOverflow.java Foo.java
+ * @compile --add-modules=java.xml.bind SchemagenStackOverflow.java Foo.java
  * @run testng/othervm --add-modules=java.xml.bind SchemagenStackOverflow
  */
 
